// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with type multi city and status closed 1`] = `
<Component
  style={
    Object {
      "borderRadius": 4,
      "height": 152,
      "justifyContent": "space-between",
      "width": "100%",
    }
  }
>
  <NetworkImageWithContext
    resizeMode="cover"
    source={
      Object {
        "uri": "https:/images.kiwi.com/photos/600x330/bergen_no.jpg",
      }
    }
    style={
      Object {
        "borderRadius": 4,
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <StretchedImage
    source={
      Object {
        "testUri": "../../../app/shared/images/black-to-alpha-vertical.png",
      }
    }
    style={
      Object {
        "borderRadius": 4,
        "width": "100%",
      }
    }
  />
  <Component
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
          "padding": 10,
        },
      ]
    }
  >
    <ImageBadges
      bookingId={54134543}
      status="CLOSED"
    />
  </Component>
  <Component
    style={
      Array [
        Object {
          "justifyContent": "flex-end",
        },
        Object {
          "padding": 10,
        },
      ]
    }
  >
    <FromToRow
      arrivalCity="Bergen"
      departureCity="Barcelona"
      type="MULTICITY"
    />
    <DateAndPassengerCount
      formattedDate="Thu 01/01"
      passengerCount={1}
    />
  </Component>
</Component>
`;

exports[`renders with type one way ans status confirmed 1`] = `
<Component
  style={
    Object {
      "borderRadius": 4,
      "height": 152,
      "justifyContent": "space-between",
      "width": "100%",
    }
  }
>
  <NetworkImageWithContext
    resizeMode="cover"
    source={
      Object {
        "uri": "https:/images.kiwi.com/photos/600x330/tromso_no.jpg",
      }
    }
    style={
      Object {
        "borderRadius": 4,
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <StretchedImage
    source={
      Object {
        "testUri": "../../../app/shared/images/black-to-alpha-vertical.png",
      }
    }
    style={
      Object {
        "borderRadius": 4,
        "width": "100%",
      }
    }
  />
  <Component
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
          "padding": 10,
        },
      ]
    }
  >
    <ImageBadges
      bookingId={54134543}
      status="CONFIRMED"
    />
  </Component>
  <Component
    style={
      Array [
        Object {
          "justifyContent": "flex-end",
        },
        Object {
          "padding": 10,
        },
      ]
    }
  >
    <FromToRow
      arrivalCity="Tromsø"
      departureCity="Barcelona"
      type="ONE_WAY"
    />
    <DateAndPassengerCount
      formattedDate="Thu 01/01"
      passengerCount={3}
    />
  </Component>
</Component>
`;

exports[`renders with type return and status refunded 1`] = `
<Component
  style={
    Object {
      "borderRadius": 4,
      "height": 152,
      "justifyContent": "space-between",
      "width": "100%",
    }
  }
>
  <NetworkImageWithContext
    resizeMode="cover"
    source={
      Object {
        "uri": "https:/images.kiwi.com/photos/600x330/oslo_no.jpg",
      }
    }
    style={
      Object {
        "borderRadius": 4,
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <StretchedImage
    source={
      Object {
        "testUri": "../../../app/shared/images/black-to-alpha-vertical.png",
      }
    }
    style={
      Object {
        "borderRadius": 4,
        "width": "100%",
      }
    }
  />
  <Component
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
          "padding": 10,
        },
      ]
    }
  >
    <ImageBadges
      bookingId={54134543}
      status="REFUNDED"
    />
  </Component>
  <Component
    style={
      Array [
        Object {
          "justifyContent": "flex-end",
        },
        Object {
          "padding": 10,
        },
      ]
    }
  >
    <FromToRow
      arrivalCity="Oslo"
      departureCity="Barcelona"
      type="RETURN"
    />
    <DateAndPassengerCount
      formattedDate="Thu 01/01"
      passengerCount={2}
    />
  </Component>
</Component>
`;
